commit c8874d7ea0fa5c4b07789ae157a0e2e0041d20fb
Date:   Wed Apr 22 01:26:39 2015 +0300

    Added some intro documentation on PyZmq:
    share/doc/05PyZmq.txt

commit 5e7cfb413165f2304aad2065e59d716c4a2d5e81
Date:   Tue Apr 21 19:42:44 2015 +0300

    You can now run ZeroMQ on Python under Mt4.
    Install pyzmq into your Python, and you can use ZeroMQ.
    
    The beginings of a test is in
    MQL4/Experts/OTMql4/OTPyTestZmqEA.mq4
    More examples and documentayion will follow.

commit c7695bc6184231f53711875a4ba3506d881cc595
Date:   Mon Apr 20 14:59:06 2015 +0300

    Broke the Python code out into a module.
    MQL4/Python/OTMql427.py  ->  MQL4/Python/OTMql427/__init__.py

commit 63400f9b73f2b3c6d14a83574d8dd1a6a132b697
Date:   Mon Apr 20 10:05:06 2015 +0300

    Compiled MQL4/Libraries/OTMql4/py27.dll from our source.

commit c0e17d6a7c8bed16a770ef9cb14b853aad4c7f97
Date:   Thu Apr 16 21:01:50 2015 +0300

    Compiled new py27.dll from our source.
    
    Old dll is now py27.dll.bak.

commit 7b09f46e6be4c81020e8f3678cbab4393412a27e
Date:   Thu Apr 16 20:54:05 2015 +0300

    Rename temporary py27.dll to py27.dll.bak.
    
    Added legacy code for reference in net/Http/sites.google.com/site/prof7bit
    
    Moved source into src/mql4py.

commit 5db0dbe5c20b15cc0eb917cc5a2b65d7638f1997
Date:   Mon Apr 13 18:50:45 2015 +0300

    Put tests into OTMql4PyTest.mq4 Script.

commit 53bd17b619036e4eedeb3f0ed9a46f77f029dda9
Date:   Mon Apr 13 09:33:25 2015 +0300

    Converted the testing EA into a script as OTMql4PyTest.mq4.

commit 2b3f481042eeddedea62c1d0b9cf6d187618b548
Date:   Thu Apr 2 20:01:13 2015 +0300

    Moved libraries into Libraries/OTMql4 to keep things tidy.

commit d1636a95889fce92b84d13ccad4db0ef6b4831ed
Date:   Thu Apr 2 16:33:22 2015 +0300

    Fixed? markdown.

commit 89310a28e2baa03a502f6fe130e2c488fd505b48
Date:   Thu Apr 2 16:28:55 2015 +0300

    Updated markdown in Readme.md.

commit c676b55d8624000c643fa76067ada3c2303ed6a4