@@ -10,7 +10,7 @@ https://sites.google.com/site/prof7bit/metatrader-python-integration
 with contributions by C. Polymeris 
 http://chiselapp.com/user/polymeris/repository/metatraderpy/index
 
-**This is a work in progress - a pre-developers version.**
+**This is a work in progress - a developers' pre-release version.**
 
 It works well on builds > 6xx, but the documentation of the changes to the
 original code still need writing, as well as more tests and testing on
@@ -110,7 +110,13 @@ The `iPyInit` initialization creates a temporary global veriable called
 `vPyDeInit` decrements it by one each time it is called, and if `fPythonUsers`
 is zero, then it calls `OTMql427.vPyDeInit` to unload the Python interpreter.
 `fPythonUsers` should always be equal to the number of charts and scripts
-Python is being used on.
+Python is being used on. Unfortunately, if your recompile your expert
+while Python is loaded, then Mt4 will deinit your expert and re-init the
+expert. If you only had one chart using Python (fPythonUsers=1), then
+this will unload Python when Mt4 deinits the expert, and when Mt4 re-inits
+the Python, it will fail to initialize the `py27.dll` properly. If Mt4
+`OnInit` had a required `reason` argument the way `OnDeinit` does, we
+could work around this, but it doesn't. Suggestions welcome...
 
 The `iPyInit` initialization also creates a persistent global veriable called
 "fDebugLevel" which is used by the logging code, and it ranges from 0 to 5:
@@ -150,6 +156,46 @@ Metatrader if this happens.
 
 
 
+### Mt4 and Python Architecture
+
+Mt4 runs an expert attached to a chart in a thread.
+Python in a Mt4 expert starts a main thread that is unique to the
+application, and starts another worker thread. The main thread is blocked
+until Python is unloaded, and everything takes place in the worker thread.
+The worker thread can start more threads.
+
+You can send commands from Mt4 to Python, but Python can't send commands
+to Mt4. So what you can do is queue if things for Mt4 to do, and
+periodically get Mt4 to ask Python if it has anything it wants Mt4 to do.
+It's easiest to think of registering an EventTimer with you expert, and
+to have `OnTimer` function periodically ask Python if it has any work.
+(Remeber that `EventTimer` events fire even if the market is closed or
+you have no connection, unlike `OnTick` events.)
+
+The problem is that Mt4 does not have an eval command, so if Python wants
+Mt4 to do something, like `OrderSend`, we can't just pass a string to Mt4
+that says `OrderSend(...)` and expect Mt4 to eval it. So what we have done
+is write a simplistic replacement to what should be an `Eval` command in
+Mt4, that will parse as string and execute it. See that function
+`zMt4LibProcessCmd` in `MQL4/Libraries/OTMql4/OTLibMt4ProcessCmd.mq4`
+of  the `OTMql4Lib` package (https://github.com/OpenTrading/OTMql4Lib/).
+See also `OTLibProcessCmd.mq4` for an example of how to extend
+`zMt4LibProcessCmd` to process your own functions.
+
+This is not a proper replacement to an `Eval` function. It only executes
+commands that it knows about, and has no ability to decipher complex commands.
+Still, it allows Python to make decisions and ask Mt4 to do thinngs,
+which is enough for order and account processing. You can use this for
+bi-directional interaction with a program outside of Mt4. For example,
+you could use a call from `OnTick` into Python to send tick and bar info
+to another program, and then use a call from `OnTimer` into Python to
+ask if there is is any request back from the program that it wants Mt4
+to evaluate.
+
+You may also want to use threads and queues within Python to make sure
+that any command that you ask Python to execute is accomplished within
+the time it takes to get the next tick. It is untested as to whether
+the Python dispatched from `OnTick` can block the chart or not.
 ## PyZmq
 
 PyZMQ is the official Python binding for the ZeroMQ Messaging Library
@@ -205,8 +251,8 @@ information and placing orders, using the script `OTZmqRequest.py`.
 
 You can test the code that will be called by Mt4 by going to the
 `OTMqlPy/MQL4/Python/OTMql427/` directory and executing
-`python ZmqChart.py` when yo already have started an instance of
-`python OTZmqSubscribe.py -v 4 tick timer bar retval`
+`python ZmqChart.py` when you already have started in the background
+an instance of `python OTZmqSubscribe.py -v 4 tick timer bar retval` .
 You should see messages being generated by `ZmqChart` and printed by
 `OTZmqSubscribe`. Make sure that this is working before you try
 using `ZmqChart` from Mt4.
