@@ -7,7 +7,7 @@ https://sites.google.com/site/prof7bit/metatrader-python-integration
 with contributions by C. Polymeris 
 http://chiselapp.com/user/polymeris/repository/metatraderpy/index
 
-**This is a work in progress - a pre-developers version.**
+**This is a work in progress - a developers' pre-release version.**
 
 It works well on builds > 6xx, but the documentation of the changes to the
 original code still need writing, as well as more tests and testing on
