@@ -53,8 +53,8 @@ information and placing orders, using the script `OTZmqRequest.py`.
 
 You can test the code that will be called by Mt4 by going to the
 `OTMqlPy/MQL4/Python/OTMql427/` directory and executing
-`python ZmqChart.py` when yo already have started an instance of
-`python OTZmqSubscribe.py -v 4 tick timer bar retval`
+`python ZmqChart.py` when you already have started in the background
+an instance of `python OTZmqSubscribe.py -v 4 tick timer bar retval` .
 You should see messages being generated by `ZmqChart` and printed by
 `OTZmqSubscribe`. Make sure that this is working before you try
 using `ZmqChart` from Mt4.
